Add missing viewport

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="">
 
-    <meta property="og:title" content="Batman">
-    <meta property="og:description" content="lorem, ipsum">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
